--- a/mobile.html
+++ b/mobile.html
@@ -66,7 +66,7 @@
           </div>
           <div class="make-order">
             <div class="call icon icon--phone"><span class="call__text">Оформить заказ по телефону</span><a class="call__number" href="tel: +380954589846">+38 095 458-98-46</a><a class="call__number" href="tel: +380443590899">+38 044 359-08-99</a></div>
-            <div class="location icon icon--location-pin"><a class="location__text" href="#">Наличие в бутиках ONE CLUB</a></div>
+            <div class="location icon icon--location-pin"><a class="location__text" href="javascript:PopUpShow()">Наличие в бутиках ONE CLUB</a></div>
           </div>
           <div class="details">
             <h3 class="details__title icon icon--minus"> <span>Описание и детали</span></h3>
@@ -138,6 +138,18 @@
       </section>
       <section class="recommendation"><span class="recommendation__text">Смотрите также:</span><a class="recommendation__link" href="#">Одежда</a><a class="recommendation__link" href="#">Трикотаж</a><a class="recommendation__link" href="#">Шелк</a><a class="recommendation__link" href="#">Все товары бренда Philipp Plein</a></section>
     </main>
+    <div class="location-popup">
+      <div class="location-popup__content">
+        <div class="popup__header"><span class="popup__title">Наличие товара в бутиках One Club</span><a class="popup-close icon icon--close" href="javascript:PopUpHide()"></a></div>
+        <div class="popup__main"><span class="popup__main-title">Платье<b>Current Elliot,</b>размер S</span>
+          <div class="popup__main-locations">
+            <div class="popup__main-locations-item"><span class="location-title">ТЦ ГЛОБУС (3 линия, 2 этаж)</span><span class="location-text">г. Киев, ул. Институтская, 2</span><span class="location-text">Тел.: <a href="tel: +380445996999">+380 44 599-69-99</a></span><span class="location-text">Время работы: 10:00 - 22:00</span><a class="location-link" href="#">Показать на карте</a></div>
+            <div class="popup__main-locations-item"><span class="location-title">ТЦ МАНУФАКТУРА</span><span class="location-text">Обуховское шоссе-2, 2</span><span class="location-text">с. Ходосеевка, Киевская область</span><span class="location-text">Тел.:<a href="tel: +380442009898">+380 44 200-98-98</a></span><span class="location-text">Время работы: 10:00 - 21:00</span><a class="location-link" href="#">Показать на карте</a></div>
+            <div class="popup__main-locations-item"><span class="location-title">ТРЦ АТМОСФЕРА</span><span class="location-text">г. Киев, Столичное шоссе, 103</span><span class="location-text">Тел.:<a href="tel: +380443934707">+380 44 393-47-07</a></span><span class="location-text">Время работы: 10:00 - 21:00</span><a class="location-link" href="#">Показать на карте</a></div>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="footer">
       <div class="footer-logo"><a href="#">One Club</a></div><span class="copy-text">&copy; 2016 ONE CLUB 2.0</span><span class="copy-text">All Right reserved</span>
       <div class="footer-social-credit">
