added slider to mobile

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <div class="time-left icon icon--clock"><span class="time-left__text">До конца распродажи</span><span class="time-left__time">3 дня, 15:37:01</span></div>
         <div class="photo Wallop">
           <div class="Wallop-list">
+            <div class="product__sale icon icon--clock"></div>
             <div class="Wallop-item Wallop-item--current"><img class="Wallop-item-img" src="images/photo1-min.jpg" alt="photo1"></div>
             <div class="Wallop-item"><img class="Wallop-item-img" src="images/photo2-min.jpg" alt="photo2"></div>
             <div class="Wallop-item"><img class="Wallop-item-img" src="images/photo3-min.jpg" alt="photo3"></div>
@@ -34,10 +35,10 @@
           </div>
           <div class="Wallop-pagination">
             <button class="Wallop-buttonPrevious"></button>
-            <button class="Wallop-dot Wallop-dot--current Wallop-dot--1"></button>
-            <button class="Wallop-dot Wallop-dot--2"></button>
-            <button class="Wallop-dot Wallop-dot--3"></button>
-            <button class="Wallop-dot Wallop-dot--4"></button>
+            <div class="Wallop-dot Wallop-dot--current Wallop-dot--1"></div>
+            <div class="Wallop-dot Wallop-dot--2"></div>
+            <div class="Wallop-dot Wallop-dot--3"></div>
+            <div class="Wallop-dot Wallop-dot--4"></div>
             <button class="Wallop-buttonNext"></button>
           </div>
         </div>
