--- a/mobile.html
+++ b/mobile.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
+    <link rel="stylesheet" href="css/wallop.css">
     <link rel="stylesheet" type="text/css" href="css/mob-style.css">
   </head>
   <body>
@@ -27,9 +28,22 @@
     <main class="main">
       <nav class="breadcrumbs"><a class="breadcrumbs__item" href="#">Главная страница</a><span>/</span><a class="breadcrumbs__item" href="#">Каталог</a><span>/</span><a class="breadcrumbs__item" href="#">Категория 1</a><span>/</span><span class="breadcrumbs__item">Costa Patch Pocket Denim Top</span></nav>
       <section class="product" id="product">
-        <div class="photo">
-          <div class="photo__nav"><a class="photo__nav-item nav-item--1 active" href="javascript:l_image ('images/photo1-min.jpg')"></a><a class="photo__nav-item nav-item--2" href="javascript:l_image ('images/photo2-min.jpg')"></a><a class="photo__nav-item nav-item--3" href="javascript:l_image ('images/photo3-min.jpg')"></a><a class="photo__nav-item nav-item--4" href="javascript:l_image ('images/photo4-min.jpg')"></a></div>
-          <div class="photo__view"><img class="photo__view-img" src="images/photo1-min.jpg" name="example_img"></div>
+        <div class="photo Wallop">
+          <div class="Wallop-list">
+            <div class="product__sale icon icon--clock"></div>
+            <div class="Wallop-item Wallop-item--current"><img class="Wallop-item-img" src="images/photo1-min.jpg" alt="photo1"></div>
+            <div class="Wallop-item"><img class="Wallop-item-img" src="images/photo2-min.jpg" alt="photo2"></div>
+            <div class="Wallop-item"><img class="Wallop-item-img" src="images/photo3-min.jpg" alt="photo3"></div>
+            <div class="Wallop-item"><img class="Wallop-item-img" src="images/photo4-min.jpg" alt="photo4"></div>
+          </div>
+          <div class="Wallop-pagination">
+            <button class="Wallop-buttonPrevious"></button>
+            <div class="Wallop-dot Wallop-dot--current"></div>
+            <div class="Wallop-dot"></div>
+            <div class="Wallop-dot"></div>
+            <div class="Wallop-dot"></div>
+            <button class="Wallop-buttonNext"></button>
+          </div>
         </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
@@ -158,6 +172,7 @@
       </div>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="js/Wallop.min.js"></script>
     <script src="js/main-mob.js"></script>
   </body>
 </html>
