--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
         </div>
         <div class="description">
           <h1 class="product__title">Current Elliott<span class="product__subtitle">Costa Patch Pocket Denim Top</span></h1>
-          <div class="price"><span class="price--old">30 000 грн</span><span class="price--new">15 000 грн</span></div>
+          <div class="price">
+            <div class="price__number"><span class="price__number price--old">30 000 грн</span><span class="price__number price--new">15 000 грн</span></div>
+            <div class="price__sale">-50%</div>
+          </div>
           <div class="color"><span class="color__text">Цвет: </span><span class="color__name">Синий</span>
             <div class="colors">
               <div class="color__pic color--1" data-toggle-color></div>
