added smth like pixel perfect

--- a/index.html
+++ b/index.html
@@ -60,13 +60,7 @@
             <div class="price__sale">-50%</div>
           </div>
           <div class="color"><span class="color__text">Цвет: </span><span class="color__name">Синий</span>
-            <div class="colors">
-              <div class="color__pic color--1" data-toggle-color></div>
-              <div class="color__pic color--2 active" data-toggle-color></div>
-              <div class="color__pic color--3" data-toggle-color></div>
-              <div class="color__pic color--4" data-toggle-color></div>
-              <div class="color__pic color--5" data-toggle-color></div>
-            </div>
+            <div class="colors"><img class="color__pic" src="images/color1-min.png" data-toggle-color><img class="color__pic" src="images/color2-min.png" data-toggle-color><img class="color__pic" src="images/color3-min.png" data-toggle-color><img class="color__pic" src="images/color4-min.png" data-toggle-color><img class="color__pic" src="images/color5-min.png" data-toggle-color></div>
           </div>
           <div class="size">
             <div class="size__info"><span class="size__text">Размер:</span><a class="size__table" href="#">Таблица размеров</a></div>
