added placeholders to colors

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
             <div class="price__number"><span class="price__number price--old">30 000 грн</span><span class="price__number price--new">15 000 грн</span></div>
             <div class="price__sale">-50%</div>
           </div>
-          <div class="color"><span class="color__text">Цвет: </span><span class="color__name">Синий</span>
-            <div class="colors"><img class="color__pic" src="images/color1-min.png" data-toggle-color><img class="color__pic" src="images/color2-min.png" data-toggle-color><img class="color__pic" src="images/color3-min.png" data-toggle-color><img class="color__pic" src="images/color4-min.png" data-toggle-color><img class="color__pic" src="images/color5-min.png" data-toggle-color></div>
+          <div class="swatch"><span class="swatch__text">Цвет: </span><span class="swatch__name">Синий</span>
+            <div class="swatches"><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color></div>
           </div>
           <div class="size">
             <div class="size__info"><span class="size__text">Размер:</span><a class="size__table" href="#">Таблица размеров</a></div>
