--- a/header.html
+++ b/header.html
@@ -5,10 +5,12 @@
   <div class="switcher"><a class="switcher__item icon icon--clock" href="#"><span>Акции</span></a><a class="switcher__item" href="#"><span>Каталог</span></a></div>
   <div class="contact-search">
     <div class="contact"><a class="phone icon icon--phone icon--contact" href="tel: +380443590899"><span class="contact__link">+380 44 359-08-99</span><span>Пн-Вс: 9:00-21:00</span></a><a class="login icon icon--avatar icon--contact" href="#"><span class="contact__link">Войти</span></a><a class="basket icon icon--shopping-cart icon--contact" href="#"><span class="contact__link">Корзина</span><span class="contact__number">2</span></a></div>
-    <form class="search" action="#">
-      <input class="search__input" type="search" placeholder="Поиск..."/>
-      <button class="search-icon" type="submit"></button>
-    </form>
+    <div class="search-wrapper">
+      <form class="search" action="#">
+        <input class="search__input" type="search" placeholder="Поиск..."/>
+        <button class="search-icon" type="submit"></button>
+      </form>
+    </div>
   </div>
   <nav role="navigation">
     <div class="menu-icon" data-toggle-menu="data-toggle-menu"></div>
