--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <div class="price__sale">-50%</div>
           </div>
           <div class="swatch"><span class="swatch__text">Цвет: </span><span class="swatch__name">Синий</span>
-            <div class="swatches"><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35x35" data-toggle-color></div>
+            <div class="swatches"><img class="swatch__pic" src="http://placehold.it/35/636363/ffffff" data-toggle-color><img class="swatch__pic active" src="http://placehold.it/35/0a0c44/ffffff" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35/ffc66d/ffffff" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35/b30016/ffffff" data-toggle-color><img class="swatch__pic" src="http://placehold.it/35/abc850/ffffff" data-toggle-color></div>
           </div>
           <div class="size">
             <div class="size__info"><span class="size__text">Размер:</span><a class="size__table" href="#">Таблица размеров</a></div>
